# gnslgbot2

./: .env.example  .gitignore  .replit  Aptfile  Dockerfile  RENDER_DEPLOYMENT_GUIDE_UPDATED.md  entrypoint.sh  main.py  prestart.sh  pyproject.toml  render.yaml  render_requirements.txt  replit.md  setup_clean_repo.sh  verify_deployment.py
attached_assets/: Pasted--Command-registered-hit-aliases-Command-registered-sagad-aliases-Command--1761685541474_1761685541475.txt  Pasted--Command-registered-leaderboard-aliases-Command-registered-stoplisten-aliases--1761685647655_1761685647656.txt  Pasted-import-discord-from-discord-ext-import-commands-from-groq-import-Groq-import-asyncio-from-collection-1761685775169_1761685775171.txt  Pasted-remote-To-push-remove-secret-from-commit-s-or-follow-this-URL-to-allow-the-secret-re-1752575333118_1752575333118.txt
bot/: __init__.py  cog.py  cog.py.bak  config.py  firebase_db.py  firebase_migration.py  postgres_db.py  rate_limiter.py  runtime_config.py  speech_recognition_cog.py  status_monitor.py  text_normalizer.py
scripts/: migrate_firebase_to_postgres.py
templates/: index.html
