[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.6.4",
    "dnspython==2.6.1",
    "edge-tts>=7.0.0",
    "firebase-admin==6.5.0",
    "flask>=3.1.2",
    "google-auth==2.30.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.0",
    "groq==0.18.0",
    "gtts==2.5.4",
    "openai==1.69.0",
    "pocketsphinx==5.0.4",
    "psutil>=7.1.2",
    "psycopg2-binary==2.9.10",
    "pydub==0.25.1",
    "pynacl==1.5.0",
    "python-dotenv==1.0.1",
    "pytube==15.0.0",
    "pytz>=2025.2",
    "requests==2.32.3",
    "speechrecognition==3.14.2",
    "spotipy==2.25.1",
    "urllib3==2.2.2",
    "wavelink==3.4.1",
    "yt-dlp==2025.3.27",
]
